--- a/src/css/pages/about.styl
+++ b/src/css/pages/about.styl
@@ -24,6 +24,7 @@ body.about .logo path
     &--burgundy
         background: url('../assets/images/shadow-dissolve-burgundy.png') no-repeat;
         background-color: #572A40
+        background-size: auto 100%
         color: #ECD444 !important
         padding-top: calc(7rem+11.112vw) // 7 to match red-brick margin-bottom
         padding-bottom: 5.556vw;
@@ -48,9 +49,10 @@ body.about .logo path
     margin-bottom: -7.556vw; // Margin minus to get burgundy section to fall behind
 
 .wrapper-about
-    max-width: 50rem
+    width: 55vw
     margin: 0 auto
-    padding: 0 2.5rem 2rem
+    padding: 0 2.5rem 5.556vw
+    max-width: 65rem
 
 .about-hand
     position: relative;
