--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -25,6 +25,61 @@ body.hom .logo path
 .hom .header nav a::before 
     background: #DC5842   
 
+
+body.ls 
+    background-color: #000000
+    transition: 0s;
+
+body.ls .logo path 
+    fill: #DFE1EB
+
+.ls .text-link
+    color: #DFE1EB
+
+.ls .header nav a::before 
+    background: #DFE1EB 
+
+body.mtn 
+    background-color: #CECFD0
+    transition: 0s;
+
+body.mtn .logo path 
+    fill: #161616
+
+.mtn .text-link
+    color: #161616
+
+.mtn .header nav a::before 
+    background: #161616   
+
+
+body.glasin 
+    background-color: #EDF0F3
+    transition: 0s;
+
+body.glasin .logo path 
+    fill: #1D1E1B
+
+.glasin .text-link
+    color: #1D1E1B
+
+.glasin .header nav a::before 
+    background: #1D1E1B   
+
+body.glyfit 
+    background-color: #EFEEE8
+    transition: 0s;
+
+body.glyfit .logo path 
+    fill: #1E1E1E
+
+.glyfit .text-link
+    color: #1E1E1E
+
+.glyfit .header nav a::before 
+    background: #1E1E1E   
+
+
 .case .wrapper-inner
     padding: 0 2.5rem;
     display: grid;
@@ -40,6 +95,11 @@ body.hom .logo path
         padding-top: 11.112vw;
         padding-bottom: 11.112vw
 
+
+    &--white
+        background: #fff
+        padding-bottom: 11.112vw
+
     &--margin-bottom
         margin-bottom: 5.556vw
 
@@ -53,12 +113,17 @@ body.hom .logo path
     &--margin
         padding-top: 5.556vw;
 
+    &--footer-margin
+        margin-bottom: 5rem
+
 
 .case-pic-big
     height: 70vh;
     min-height: 25rem
+    max-height: 40rem
     width: 100%;
     object-fit: cover;
+    object-position: bottom;
 
 .case-header
     margin: 0 0 5vw
@@ -80,6 +145,9 @@ body.hom .logo path
 
     &--no-margin
         margin-bottom: 0
+
+    &--stick-margin
+        margin-bottom: -2.5rem
 
     img
         object-fit: cover
@@ -117,6 +185,11 @@ body.hom .logo path
 .col img
     height: 100%
 
+.push-3-11
+    grid-column-start: 3;
+    grid-column-end: 11;
+
+
 .push-4-11
     grid-column-start: 5;
     grid-column-end: 12;
@@ -136,3 +209,4 @@ body.hom .logo path
     width: 100%
     object-fit: cover
     height: 100vh
+    display: block
