--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -79,6 +79,32 @@ body.glyfit .logo path
 .glyfit .header nav a::before 
     background: #1E1E1E   
 
+body.friend-420 
+    background-color: #E6DFC8
+    transition: 0s;
+
+body.friend-420 .logo path 
+    fill: #405C41
+
+.friend-420 .text-link
+    color: #405C41
+
+.friend-420 .header nav a::before 
+    background: #405C41
+
+body.friend-jen 
+    background-color: #FFF7F0
+    transition: 0s;
+
+body.friend-jen .logo path 
+    fill: #1D7260
+
+.friend-jen .text-link
+    color: #1D7260
+
+.friend-jen .header nav a::before 
+    background: #1D7260   
+
 
 .case .wrapper-inner
     padding: 0 2.5rem;
@@ -115,6 +141,9 @@ body.glyfit .logo path
 
     &--footer-margin
         margin-bottom: 5rem
+
+    &--no-header
+        margin-top: 8rem;
 
 
 .case-pic-big
@@ -195,6 +224,10 @@ body.glyfit .logo path
     grid-column-end: 12;
 
 .push-4-8
+    grid-column-start: 5;
+    grid-column-end: 9;
+
+.push-5-9
     grid-column-start: 5;
     grid-column-end: 9;
     
