Added thredX case and added glide lib for slider

--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -103,7 +103,26 @@ body.friend-jen .logo path
     color: #1D7260
 
 .friend-jen .header nav a::before 
-    background: #1D7260   
+    background: #1D7260
+
+body.thredx 
+    background-color: #E8E8DF
+    transition: 0s;
+
+body.thredx .header
+    mix-blend-mode: difference
+
+body.thredx .logo path 
+    fill: #fff
+
+.thredx .text-link
+    color: #fff
+
+.thredx .text-link a
+    color: #fff
+
+.thredx .header nav a::before 
+    background: #fff   
 
 
 .case .wrapper-inner
