--- a/assets/main.css
+++ b/assets/main.css
@@ -1537,6 +1537,25 @@ body.friend-jen .logo path {
 .friend-jen .header nav a::before {
   background: #1d7260;
 }
+body.thredx {
+  background-color: #e8e8df;
+  transition: 0s;
+}
+body.thredx .header {
+  mix-blend-mode: difference;
+}
+body.thredx .logo path {
+  fill: #fff;
+}
+.thredx .text-link {
+  color: #fff;
+}
+.thredx .text-link a {
+  color: #fff;
+}
+.thredx .header nav a::before {
+  background: #fff;
+}
 .case .wrapper-inner {
   padding: 0 2.5rem;
   display: grid;
@@ -2097,6 +2116,138 @@ body.work .logo path {
 }
 .post-footer .col-3 p {
   margin-top: 1rem;
+}
+.glide {
+  position: relative;
+  width: 100%;
+  box-sizing: border-box;
+}
+.glide * {
+  box-sizing: inherit;
+}
+.glide__track {
+  overflow: hidden;
+}
+.glide__slides {
+  position: relative;
+  width: 100%;
+  list-style: none;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+  touch-action: pan-Y;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  white-space: nowrap;
+  display: flex;
+  flex-wrap: nowrap;
+  will-change: transform;
+}
+.glide__slides--dragging {
+  user-select: none;
+}
+.glide__slide {
+  width: 100%;
+  height: 100%;
+  flex-shrink: 0;
+  white-space: normal;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
+}
+.glide__slide a {
+  user-select: none;
+  -webkit-user-drag: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+.glide__arrows {
+  -webkit-touch-callout: none;
+  user-select: none;
+}
+.glide__bullets {
+  -webkit-touch-callout: none;
+  user-select: none;
+}
+.glide--rtl {
+  direction: rtl;
+}
+.glide {
+  position: relative;
+  width: 100%;
+  box-sizing: border-box;
+}
+.glide * {
+  box-sizing: inherit;
+}
+.glide__track {
+  overflow: hidden;
+}
+.glide__slides {
+  position: relative;
+  width: 100%;
+  list-style: none;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+  touch-action: pan-Y;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  white-space: nowrap;
+  display: flex;
+  flex-wrap: nowrap;
+  will-change: transform;
+}
+.glide__slides--dragging {
+  user-select: none;
+}
+.glide__slide {
+  width: 100%;
+  height: 100%;
+  flex-shrink: 0;
+  white-space: normal;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
+}
+.glide__slide a {
+  user-select: none;
+  -webkit-user-drag: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+.glide__arrows {
+  -webkit-touch-callout: none;
+  user-select: none;
+}
+.glide__bullets {
+  -webkit-touch-callout: none;
+  user-select: none;
+}
+.glide--rtl {
+  direction: rtl;
+}
+.glide {
+  padding-left: 1rem;
+}
+.glide__bullets {
+  text-align: center;
+}
+.glide__bullet {
+  border-radius: 100%;
+  height: 0.5rem;
+  width: 0.5rem;
+  margin-right: 0.5rem;
+  padding: 0;
+  outline: 0;
+  background: rgba(255,255,255,0.3);
+  border: 0;
+}
+.glide__bullet:last-child {
+  margin-right: 0;
+}
+.glide__bullet--active {
+  background: rgba(255,255,255,0.8);
 }
 @-moz-keyframes slideUp {
   0% {
