--- a/src/css/header.styl
+++ b/src/css/header.styl
@@ -9,6 +9,11 @@
     align-items: center
     opacity: 1
 
+    @media $mobile
+        left: 1.5rem;
+        right: 1.5rem;
+        top: 1.5rem;
+
 .logo
     margin: 0
 
@@ -52,6 +57,9 @@
 .header li
     margin: 0 0 0 2rem
     padding: 0
+
+    @media $mobile
+        margin: 0 0 0 1rem
 
 .header li:first-child
     margin: 0
