--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -12,7 +12,7 @@ html, body
     font-size: 16px
 
 :root
-    --main-yellow: #F5B1BC
+    --main-yellow: #FBF778
     --main-bg-color: #171259
     --main-bg-work: #CDD7CF
     --main-bg-primary: #FF6237
@@ -34,6 +34,11 @@ body
     -ms-font-feature-settings: "kern", "liga", "clig", "calt";
     -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
     font-feature-settings: "kern", "liga", "clig", "calt";
+
+$mobile = '(max-width 767px)';
+$tablet = '(min-width 768px) and (max-width: 1365px)';
+$desktop = '(min-width: 1366px)';
+
 
 // text animations
 h1, h2, p, li, a
