--- a/src/css/wrapper.styl
+++ b/src/css/wrapper.styl
@@ -1,6 +1,9 @@
 .wrapper
     padding: 9rem 2.5rem 0 2.5rem
 
+    @media $mobile
+        padding: 7rem 1.5rem 1.5rem 1.5rem
+
 .front .wrapper,
 .case .wrapper
     padding: 0
