--- a/src/css/elements/button.styl
+++ b/src/css/elements/button.styl
@@ -9,6 +9,9 @@
     background: transparent
     font-size: clamp(1rem, .9vw + 0.5rem, 1.5rem);
 
+    @media $mobile
+        padding: 1rem 1.5rem;
+
     &--outline
         border: 1px solid var(--btn-color)
 
@@ -19,8 +22,17 @@
 .btn-wrapper
     display: flex
 
+    @media $mobile
+        flex-direction: column
+        width: 100%
+        padding: 1.5rem
+
     > .btn 
         margin-right: 2rem
+
+        @media $mobile
+            margin-bottom: 1.5rem
+            margin-right: 0
 
 .btn-category 
     display: block;
