--- a/src/css/elements/case-intro.styl
+++ b/src/css/elements/case-intro.styl
@@ -4,23 +4,42 @@
     display: flex
     flex-direction: column
 
+    @media $mobile
+        min-height: 0
+
 .case-intro__text
     padding: 2rem
     background-color: var(--background-color)
     flex-grow: 1
+
+    @media $mobile
+        padding: 1.5rem
 
 .case-intro__pic
     display: block
     object-fit: cover
     max-height: 80vh
 
+    @media $mobile
+        min-height: 60vh
+
+
 .case-intro__text__inner
     display: flex
     flex-direction: row
     justify-content: space-around
+
+    h2
+        margin-bottom: 0
+
+    @media $mobile
+        flex-direction: column
 
     p
         margin-top: 1rem
 
     > *
         width: 50%
+
+        @media $mobile
+            width: 100%
