--- a/src/css/header-big.styl
+++ b/src/css/header-big.styl
@@ -13,6 +13,11 @@
     width: 58%
     padding-top: 32px
 
+    @media $mobile
+        width: 100%
+        padding: 0
+        margin: 0
+
 .header-big__bg 
     position: absolute;
     top: 0;
