--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -133,6 +133,10 @@ body.thredx .logo path
     grid-gap: 2.5rem;
     color: var(--text)
 
+    @media $mobile
+        padding: 1.5rem
+        grid-gap: 1.5rem;
+
     &--dark
         background: #161616
         margin-top: 5.556vw;
@@ -140,6 +144,8 @@ body.thredx .logo path
         padding-top: 11.112vw;
         padding-bottom: 11.112vw
 
+        @media $mobile
+            padding-bottom: 10rem
 
     &--white
         background: #fff
@@ -176,6 +182,9 @@ body.thredx .logo path
 .case-header
     margin: 0 0 5vw
 
+    @media $mobile
+        margin-bottom: 0
+
 .case-pic
     margin: 0
     border-radius: 6px
@@ -188,6 +197,9 @@ body.thredx .logo path
 .col
     margin-bottom: 5.556vw
 
+    @media $mobile
+        margin-bottom: 0
+
     &--small-margin
         margin-bottom: 2.778vw
 
@@ -196,6 +208,9 @@ body.thredx .logo path
 
     &--stick-margin
         margin-bottom: -2.5rem
+
+        @media $mobile
+            margin-bottom: -1.5rem
 
     img
         object-fit: cover
@@ -206,11 +221,21 @@ body.thredx .logo path
 .col-3
     grid-column: span 3;
 
+    @media $mobile
+        grid-column: span 12;
+
+
 .col-5
     grid-column: span 5;
 
+    @media $mobile
+        grid-column: span 12;
+
 .col-6
     grid-column: span 6;
+
+    @media $mobile
+        grid-column: span 12;
 
     &--center
         grid-column-start: 4;
@@ -220,14 +245,24 @@ body.thredx .logo path
 .col-7
     grid-column: span 7;
 
+    @media $mobile
+        grid-column: span 12;
+
 .col-4
     grid-column: span 4;
 
+    @media $mobile
+        grid-column: span 12;
+
 .col-8
     grid-column: span 8;
+    
+    @media $mobile
+        grid-column: span 12;
 
 .col-12
     grid-column: span 12;
+
 
 .col figure,
 .col img
@@ -237,22 +272,46 @@ body.thredx .logo path
     grid-column-start: 3;
     grid-column-end: 11;
 
+    @media $mobile
+        grid-column-start: none;
+        grid-column-end: none;
+        grid-column: span 12
+
 
 .push-4-11
     grid-column-start: 5;
     grid-column-end: 12;
 
+    @media $mobile
+        grid-column-start: none;
+        grid-column-end: none;
+        grid-column: span 12
+
 .push-4-8
     grid-column-start: 5;
     grid-column-end: 9;
 
+    @media $mobile
+        grid-column-start: none;
+        grid-column-end: none;
+        grid-column: span 12
+
 .push-5-9
     grid-column-start: 5;
     grid-column-end: 9;
+
+    @media $mobile
+        grid-column-start: none;
+        grid-column-end: none;
+        grid-column: span 12
     
 .full-width-pic
     margin-left: -2.5rem
     margin-right: -2.5rem
+
+    @media $mobile
+        margin-left: -1.5rem
+        margin-right: -1.5rem
     
     .case-pic
         border-radius: 0
