--- a/src/css/pages/home.styl
+++ b/src/css/pages/home.styl
@@ -33,8 +33,17 @@ body.front .logo path
     align-items: center;
     justify-content: center;
     padding: 15vw 0 12vw;
+    overflow: hidden
+
+    @media $mobile
+        padding: 5rem 0
+        min-height: 0;
 
 .front-info__text 
     padding: 0 2rem
     text-align: center
     max-width: 60%
+
+    @media $mobile
+        max-width: 100%
+        padding: 1.5rem
