--- a/src/css/pages/shop.styl
+++ b/src/css/pages/shop.styl
@@ -16,17 +16,29 @@ body.shop .logo path
     text-align: center
     margin: 0 auto 5vw
 
+    @media $mobile
+        width: 80%
+
 .shop .wrapper
     padding: 9rem 0 0 0
 
+    @media $mobile
+        padding: 7rem 0 0 0
+
 .shop .wrapper-inner
     margin-bottom: 11.112vw
+
+    @media $mobile
+        margin-bottom: 7rem
 
 .shop-wrapper
     display: flex;
     flex-direction: row;
     flex-flow: wrap;
     padding: 0 2.5rem
+    
+    @media $mobile
+        padding: 0 1.5rem
 
 .shop-item 
     width: calc(50% - 1.25rem);
@@ -36,6 +48,12 @@ body.shop .logo path
     animation-delay: .8s;
     opacity: 0
     position relative
+
+    @media $mobile
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 5rem;
+        margin-bottom: 3rem
 
     &:nth-child(2)
         animation-delay: 1s;
