--- a/src/css/pages/work.styl
+++ b/src/css/pages/work.styl
@@ -8,6 +8,9 @@ body.work
     background-position: 100% 0;
     background-size: 500px;
 
+    @media $mobile
+        background-image: none
+
 body.work .logo path
     fill: var(--main-work-primary)
 
@@ -20,8 +23,14 @@ body.work .logo path
 .work .wrapper 
     padding: 9rem 0 0 0
 
+    @media $mobile
+        padding-top: 7rem
+
 .work .wrapper-inner
     padding: 0 2rem
+
+    @media $mobile
+        padding: 0 2rem 1rem
 
 .case-wrapper
     margin-top: 11vw
@@ -31,6 +40,9 @@ body.work .logo path
 
 .case-small:last-child 
     height: 210px
+
+    @media $mobile
+        height: 160px
 
 .case-small:last-child .case-small__inner:hover
     transform: translateY(0)
@@ -56,12 +68,18 @@ body.work .logo path
     width: 100%
     transition: .6s cubic-bezier(0.075, 0.82, 0.165, 1)
     height: 100%
+
+    @media $mobile
+        padding: 1rem 1.5rem 0 1.5rem
     
     &:hover
         position: absolute;
         transform: translateY(-2.5rem)
         background: var(--background)
         color: var(--text)
+
+        @media $mobile
+            transform: translateY(-1.5rem)
 
         .btn-category 
             border-color: var(--text)
@@ -76,6 +94,9 @@ body.work .logo path
     height: 160px;
     width: 100%
     animation-delay: .6s;
+
+    @media $mobile
+        height: 125px
 
     a 
         position absolute
@@ -113,10 +134,14 @@ body.work .logo path
 
     &:nth-child(11)
         animation-delay: (.6s+2s);
+
     h2 
-        font-size: clamp(3.375rem, 4vw + 1.25rem, 5.625rem);
+        font-size: clamp(2.5rem, 4vw + 1.25rem, 5.625rem);
         line-height: 1.1
         margin-right: 1rem
 
 .category-wrapper
     display: flex
+
+    @media $mobile
+        display: none
