--- a/src/css/pages/about.styl
+++ b/src/css/pages/about.styl
@@ -24,7 +24,7 @@ body.about .logo path
     &--burgundy
         background: url('../assets/images/shadow-dissolve-burgundy.webp') no-repeat;
         background-color: #572A40
-        background-size: auto 100%
+        background-size: 100% 40%
         color: #ECD444 !important
         padding-top: calc(7rem+11.112vw) // 7 to match red-brick margin-bottom
         padding-bottom: 5.556vw;
