--- a/src/css/header.styl
+++ b/src/css/header.styl
@@ -8,6 +8,7 @@
     justify-content: space-between
     align-items: center
     opacity: 1
+    transition: .3s ease-in
 
     @media $mobile
         left: 1.5rem;
@@ -16,6 +17,13 @@
 
 .logo
     margin: 0
+
+
+.logo svg
+
+    @media $desktop-l
+        height: 40px;
+        width: 100%;
 
 .logo path
     transition: .3s ease-in
