--- a/src/css/pages/contact.styl
+++ b/src/css/pages/contact.styl
@@ -28,6 +28,9 @@ body.contact .logo path
     left: 0
     top: 0
 
+    @media $desktop-l
+        width: 25%;
+
     @media $mobile
         display: none
 
