--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -38,6 +38,8 @@ body
 $mobile = '(max-width 767px)';
 $tablet = '(min-width 768px) and (max-width: 1365px)';
 $desktop = '(min-width: 1366px)';
+$desktop-l = '(min-width: 1666px)';
+$desktop-xl = '(min-width: 2000px)';
 
 
 // text animations
