--- a/src/css/pages/shop.styl
+++ b/src/css/pages/shop.styl
@@ -22,6 +22,9 @@ body.shop .logo path
 .shop .wrapper
     padding: 9rem 0 0 0
 
+    @media $desktop-xl
+        padding: 12rem 0 0 0
+
     @media $mobile
         padding: 7rem 0 0 0
 
