--- a/src/css/pages/work.styl
+++ b/src/css/pages/work.styl
@@ -8,6 +8,9 @@ body.work
     background-position: 100% 0;
     background-size: 500px;
 
+    @media $desktop-xl
+        background-size: 730px;
+
     @media $mobile
         background-image: none
 
@@ -22,6 +25,9 @@ body.work .logo path
 
 .work .wrapper 
     padding: 9rem 0 0 0
+
+    @media $desktop-xl
+        padding: 12rem 0 0 0
 
     @media $mobile
         padding-top: 7rem
@@ -77,6 +83,9 @@ body.work .logo path
         transform: translateY(-2.5rem)
         background: var(--background)
         color: var(--text)
+
+        @media $desktop-xl
+            transform: translateY(-3.5rem)
 
         @media $mobile
             transform: translateY(-1.5rem)
