--- a/src/css/header-big.styl
+++ b/src/css/header-big.styl
@@ -9,6 +9,9 @@
     text-align: center;
     justify-content: center;
 
+    @media $mobile
+        padding: 0 1rem
+
 .header-big h1 
     width: 58%
     padding-top: 32px
