--- a/src/css/pages/front.styl
+++ b/src/css/pages/front.styl
@@ -2,7 +2,7 @@
     padding: 11.112vw
 
     @media $mobile
-        padding: 5rem 1.5rem
+        padding: 4rem 1.5rem
 
 .front .wrapper
     position relative
@@ -34,8 +34,7 @@
     top: 15%;
     
     @media $mobile
-        left: -15%
-        top: -7%;
+        display: none
 
 #stars-2
     position: absolute;
@@ -45,8 +44,7 @@
     transform: rotate(180deg);
 
     @media $mobile
-        right: -15%
-        top: -7%;
+        display: none
 
 #front-hand
 
