--- a/src/css/pages/shop.styl
+++ b/src/css/pages/shop.styl
@@ -17,7 +17,7 @@ body.shop .logo path
     margin: 0 auto 5vw
 
     @media $mobile
-        width: 80%
+        width: 100%
 
 .shop .wrapper
     padding: 9rem 0 0 0
@@ -75,6 +75,9 @@ body.shop .logo path
 
     .shop-item__text
         margin: 1rem 0 0 0
+
+        @media $mobile
+            margin: 0
 
     .shop-item__price
         opacity: .6
