--- a/src/css/elements/case-intro.styl
+++ b/src/css/elements/case-intro.styl
@@ -6,7 +6,7 @@
     background-color: var(--background-color)
 
     @media $mobile
-        padding: 1.5rem
+        padding: 1rem
 
 .case-intro__pic
     display: block
@@ -14,6 +14,9 @@
     height: 50vw;
     width: 100%;
     object-position: 60% 40%;
+
+    @media $mobile
+        height: 100vw
 
 
 .case-intro__text__inner
