--- a/src/css/elements/footer.styl
+++ b/src/css/elements/footer.styl
@@ -13,7 +13,9 @@
 
     @media $mobile
         grid-gap: 1.5rem
-        padding-bottom: 7rem
+        padding-bottom: 2rem;
+        border-radius: 1rem 1rem 0 0;
+        padding-top: 2rem;
 
     &--dark
         background: linear-gradient(180deg, rgba(111,143,114,1) 68%, rgba(94,121,97,1) 68%);
@@ -33,8 +35,8 @@
     text-align: center;
 
     @media $mobile
-        grid-column-start: 3;
-        grid-column-end: 11;
+        grid-column-start: 2;
+        grid-column-end: 12;
 
 .footer-graphic-one
     position: absolute;
@@ -43,7 +45,7 @@
     bottom: 60px;
 
     @media $mobile
-        max-width: 210px;
+        display: none
 
 .footer-graphic-two
     position: absolute;
@@ -52,8 +54,7 @@
     bottom: 120px;
 
     @media $mobile
-        max-width: 190px;
-        bottom: 20px
+        display: none
 
 .post-footer
     background: var(--background-post-footer)
@@ -64,8 +65,8 @@
     padding: 4.5rem 2.5rem
 
     @media $mobile
-        grid-gap: 1.5rem
-        padding: 2.5rem 1.5rem 0;
+        grid-gap: 0
+        padding: 2.5rem 1rem 0;
 
     ul
         list-style: none
@@ -89,11 +90,12 @@
 
     .col-3
         @media $mobile
-            grid-column: span 4
+            grid-column: span 12
 
     .col-6
         @media $mobile
-            grid-column: span 4
+            grid-column: span 12
+            margin-bottom: 2rem
 
     .col-3-last
         @media $mobile
