--- a/src/css/pages/home.styl
+++ b/src/css/pages/home.styl
@@ -18,6 +18,9 @@ body.front .logo path
     right: 0
     z-index: -1
 
+    @media $mobile
+        top: -1rem
+
 .shadow-front-bottom 
     position absolute
     bottom: -6rem
@@ -25,6 +28,9 @@ body.front .logo path
     right: 0
     z-index: -1
     transform: rotate(180deg)
+
+    @media $mobile
+        bottom: -1rem
 
 .front-info
     position: relative;
@@ -36,7 +42,7 @@ body.front .logo path
     overflow: hidden
 
     @media $mobile
-        padding: 5rem 0
+        padding: 3rem 0
         min-height: 0;
 
 .front-info__text 
@@ -46,4 +52,9 @@ body.front .logo path
 
     @media $mobile
         max-width: 100%
-        padding: 1.5rem
+        padding: 1rem
+
+        h2
+            font-size: clamp(2rem, 4.6vw, 7.625rem);
+            line-height: 1.1;
+            margin: 0;
