--- a/src/css/typography.styl
+++ b/src/css/typography.styl
@@ -13,7 +13,7 @@ h5
 
 h1,
 .heading-one 
-    font-size: clamp(2.563rem, 3.6vw + 1rem, 7.625rem)
+    font-size: clamp(2.5rem, 3.6vw + 1rem, 7.625rem)
     line-height: 1.1
     margin: 0 0 2rem
     letter-spacing: .5px
@@ -34,7 +34,7 @@ h3,
 
 h4,
 .heading-four 
-    font-size: clamp(1.5rem, 1.75vw + 1rem, 4rem);
+    font-size: clamp(2rem, 1.75vw + 1rem, 4rem);
     margin: 0 0 1rem
     line-height: 1.1
     letter-spacing: .5px
@@ -115,6 +115,11 @@ p,
     text-align: center
     font-weight: 600
     line-height: 1.3
+
+    @media $mobile
+        font-size: 24px;
+        text-transform: none;
+        text-align: left;
 
 .fullsize-link
     position absolute
